add core and process base file

--- a/CUFE-DataProject/CUFE-DataProject.vcxproj
+++ b/CUFE-DataProject/CUFE-DataProject.vcxproj
@@ -132,6 +132,7 @@
     <ClInclude Include="collections\linked_stack.h" />
     <ClInclude Include="collections\list.h" />
     <ClInclude Include="collections\stack.h" />
+    <ClInclude Include="core\process.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
