--- a/Tests/Tests.vcxproj
+++ b/Tests/Tests.vcxproj
@@ -158,6 +158,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="linked_list_test.cpp" />
+    <ClCompile Include="linked_queue_test.cpp" />
     <ClCompile Include="linked_stack_test.cpp" />
   </ItemGroup>
   <ItemGroup>
