--- a/CUFE-DataProject/CUFE-DataProject.vcxproj
+++ b/CUFE-DataProject/CUFE-DataProject.vcxproj
@@ -137,6 +137,9 @@
     <ClInclude Include="common.h" />
     <ClInclude Include="core\application.h" />
     <ClInclude Include="core\process.h" />
+    <ClInclude Include="core\processor.h" />
+    <ClInclude Include="core\scheduler.h" />
+    <ClInclude Include="core\states.h" />
     <ClInclude Include="ui\gui.h" />
     <ClInclude Include="ui\color.h" />
     <ClInclude Include="ui\renderer.h" />
@@ -144,6 +147,9 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="core\application.cpp" />
+    <ClCompile Include="core\process.cpp" />
+    <ClCompile Include="core\processor.cpp" />
+    <ClCompile Include="core\scheduler.cpp" />
     <ClCompile Include="ui\gui.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="ui\renderer.cpp" />
