--- a/CUFE-DataProject/CUFE-DataProject.vcxproj
+++ b/CUFE-DataProject/CUFE-DataProject.vcxproj
@@ -135,21 +135,21 @@
     <ClInclude Include="collections\queue.h" />
     <ClInclude Include="collections\stack.h" />
     <ClInclude Include="common.h" />
-    <ClInclude Include="core\application.h" />
     <ClInclude Include="core\process.h" />
     <ClInclude Include="core\processor.h" />
     <ClInclude Include="core\scheduler.h" />
     <ClInclude Include="core\states.h" />
+    <ClInclude Include="core\deserializer.h" />
     <ClInclude Include="ui\gui.h" />
     <ClInclude Include="ui\color.h" />
     <ClInclude Include="ui\renderer.h" />
     <ClInclude Include="utils\vector2.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="core\application.cpp" />
     <ClCompile Include="core\process.cpp" />
     <ClCompile Include="core\processor.cpp" />
     <ClCompile Include="core\scheduler.cpp" />
+    <ClCompile Include="core\deserializer.cpp" />
     <ClCompile Include="ui\gui.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="ui\renderer.cpp" />
