--- a/CUFE-DataProject/CUFE-DataProject.vcxproj
+++ b/CUFE-DataProject/CUFE-DataProject.vcxproj
@@ -142,6 +142,7 @@
     <ClInclude Include="core\logger.h" />
     <ClInclude Include="core\process.h" />
     <ClInclude Include="core\processor.h" />
+    <ClInclude Include="core\processor_edf.h" />
     <ClInclude Include="core\processor_fcfs.h" />
     <ClInclude Include="core\processor_sjf.h" />
     <ClInclude Include="core\scheduler.h" />
@@ -161,6 +162,7 @@
     <ClCompile Include="core\logger.cpp" />
     <ClCompile Include="core\process.cpp" />
     <ClCompile Include="core\processor.cpp" />
+    <ClCompile Include="core\processor_edf.cpp" />
     <ClCompile Include="core\processor_fcfs.cpp" />
     <ClCompile Include="core\processor_sjf.cpp" />
     <ClCompile Include="core\scheduler.cpp" />
